@@ -1,6 +1,7 @@
 package rs.ac.bg.fon.JavaMoviesApp.controller;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -27,6 +28,6 @@ public class ReziserController {
     
     @GetMapping
     public ResponseEntity<List<ReziserDto>> getReziseri(){
-        return ResponseEntity.ok(reziserService.getAllReziseri().stream().map(reziserConverter::toDto).toList());
+        return ResponseEntity.ok(reziserService.getAllReziseri().stream().map(reziserConverter::toDto).collect(Collectors.toList()));
     }
 }
